--- a/B2/views/show_inquiry_message.erb
+++ b/B2/views/show_inquiry_message.erb
@@ -36,6 +36,12 @@
 			<td><%= m.user_id %></td>
 			<td><%= m.created_at.strftime("%Y-%m-%d %H:%M:%S") %></td>
 			<td><%= m.content %></td>
+			<td>
+				<form action="/delete_message" method="post">
+					<input type="hidden" name="id" value="<%= m.id %>" />
+					<input type="submit" value="删除" />
+				</form>
+			</td>
 		  </tr>
 		<%  end  %>
 	<%	end  %>
