--- a/B2/views/signup.erb
+++ b/B2/views/signup.erb
@@ -1,6 +1,6 @@
 <HTML><body>
 <form action="/signup" method="post">  
-  Name: <input type="text" name="username" />  
+  Username: <input type="text" name="username" />  
   Password: <input type="password" name="password" />  
   <input type="submit" value="注册" />  
 </form>
